Migrate binding-codegen to JUnit5
Migrate away from JUnit4/Hamcrest.

Change-Id: I90a48c4924015abc989bad91d339471771c358e7
Signed-off-by: Robert Varga <robert.varga@pantheon.tech>